--- a/src/components/css/Slide.css
+++ b/src/components/css/Slide.css
@@ -1,111 +1,137 @@
-.background-div{
-    background-image: url('../images//pxfuel\ \(1\).jpg');
-    width: 100vw;
-    height: 100vh;
-    background-size: cover;
-    display: flex;
-    background-position: center;
-    flex-direction: column;
+.background-div {
+  background-image: url('../images/pxfuel (1).jpg'); /* Fixed path */
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  display: flex;
+  background-position: center;
+  flex-direction: column;
+  align-items: center; /* Center content horizontally */
+  justify-content: center; /* Center content vertically */
+  text-align: center;
+  padding: 20px; /* Added padding for smaller screens */
 }
 
-.name-sec{
-line-height: 1.8em;
- text-align: center;
- margin-top: 180px;
- }
+.name-sec {
+  line-height: 1.8em;
+  text-align: center;
+  margin-top: 100px; /* Reduced margin for better responsiveness */
+}
 
- .name-sec p{
-    font-size: 1.2em;
-    color:#041119;
-    text-shadow: 2px 2px 2px #404141;
- }
+.name-sec p {
+  font-size: 1.2em;
+  color: #041119;
+  text-shadow: 2px 2px 2px #404141;
+}
 
- .name-sec h1{
-    color: #eaeaea;
-    font-size: 2.5em;
-    text-transform: uppercase;
-    font-family:'Lucida Console';
-    color: #eaeaea;
-    text-shadow: 2px 2px 2px #000000;
-    margin-bottom: 30px;
- }
+.name-sec h1 {
+  color: #eaeaea;
+  font-size: 2.5em;
+  text-transform: uppercase;
+  font-family: 'Lucida Console';
+  text-shadow: 2px 2px 2px #000000;
+  margin-bottom: 20px;
+}
 
- .name-sec h2{
+.name-sec h2 {
+  font-size: 1.6em;
+  color: #000c17;
+  text-shadow: 2px 2px 2px #404141;
+}
 
-font-size: 1.6em;
-color:  #000c17;
-text-shadow: 2px 2px 2px #404141;
- }
+/* Center button section */
+.button-sec {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; /* Wrap buttons if needed */
+  margin-top: 20px;
+  width: 100%;
+}
 
- .button-sec{
-    margin-left: 46%;
-    height: 40px;
-    width: 150px;
-    /* border: 1px solid red; */
-   display: flex;
-   justify-content: center;
-   margin-top: 20px;
- }
+/* Button styling */
+.link {
+  text-decoration: none;
+  color: #eaeaea;
+  background-color: #02131e;
+  padding: 10px 20px;
+  border-radius: 8px;
+  border: 1px solid #eaeaea;
+  font-size: 1.1em;
+  margin: 10px; /* Provides spacing between buttons */
+  display: inline-block;
+  text-align: center;
+  min-width: 150px;
+}
 
- .link{
-    text-decoration: none;
-    color: #eaeaea;
-    background-color: #02131e;
-    padding: 10px 20px;
-    margin-left:10px;
-    border-radius: 15px;
-    height: 28px;
-    width: 250px;
-    margin:0px 10px;
-    border:1px solid #eaeaea;;
-    border-radius: 8px;
-    font-size: 1.1em;
- }
+.link:hover {
+  background-color: #eaeaea2d;
+  border: 1px solid #eaeaea;
+}
 
- .link:hover {
-    background-color: #eaeaea2d  ;
-    border:1px solid #eaeaea;
+/* Center icons dynamically */
+.icon {
+  text-align: center;
+  font-size: 1.3em;
+  margin-top: 20px;
+}
+
+/* Mobile Responsiveness */
+@media (max-width: 768px) {
+  .name-sec {
+      margin-top: 60px; /* Reduce space on smaller screens */
   }
 
-.icon{
-    text-align: center;
-    margin-left: 43%;
-    font-size: 1.3em;
-}
-.link{
-    text-decoration: none;
-    color: #eaeaea;
-    background-color: #02131e;
-    border:1px solid #eaeaea; 
-    border-radius: 8px;
-    padding: 10px 20px;
-    margin: 0 10px; 
-}
-.link:hover{
-    background-color: #eaeaea2d  ;
-    border:1px solid #eaeaea;
+  .name-sec h1 {
+      font-size: 2em; /* Scale down for tablets */
+  }
+
+  .name-sec h2 {
+      font-size: 1.3em;
+  }
+
+  .button-sec {
+      flex-direction: row; /* Stack buttons vertically */
+      align-items: center;
+      font-size: 15px;
+     
+  }
+
+  .link {
+      font-size: 1em;
+      width: 0px; /* Adjust width for smaller screens */
+  }
+
+  .icon{
+    margin-top: -25px;
+
+  }
 }
 
-@media only screen and (max-width: 768px) {
-    .name-sec {
-      margin-top: 55%; 
-      margin-left: 10%; 
-      width: 80%; 
-    }
-    .background-div{
-      height: 100vh;
-    }
-  
-    .button-sec {
-      margin-left: 20%; 
-      width: 60%; 
-    }
-  
-    .link {
-      margin-left: 10px; 
-      width: 100%; 
-    }
-    .icon{
-      margin-left:23%;
-    }
+/* Extra Small Devices (Phones) */
+@media (max-width: 480px) {
+  .name-sec {
+      margin-top: 40px;
   }
+
+  .name-sec h1 {
+      font-size: 1.8em;
+  }
+
+  .name-sec h2 {
+      font-size: 1.2em;
+  }
+
+  .button-sec {
+      flex-direction: column;
+  }
+
+  .link {
+      font-size: 0.9em;
+      width: 0px;
+  }
+  
+  .icon{
+    margin-top: -25px;
+
+  }
+}
